[gd_scene load_steps=15 format=2]

[ext_resource path="res://ui/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/ui/game_ui.gd" type="Script" id=2]
[ext_resource path="res://sprites/ui/backpack.png" type="Texture" id=3]
[ext_resource path="res://sprites/ui/slot.png" type="Texture" id=4]
[ext_resource path="res://sprites/ui/health_bar_peco.png" type="Texture" id=5]
[ext_resource path="res://sprites/ui/selected_slot.png" type="Texture" id=6]
[ext_resource path="res://ui/fonts/FiraSans-Medium.otf" type="DynamicFontData" id=7]
[ext_resource path="res://sprites/ui/health_bar_peco_riceball.png" type="Texture" id=8]
[ext_resource path="res://sprites/ui/health_bar_peco_content.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 7 )

[node name="User Interface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="health_label_bg" type="ColorRect" parent="."]
margin_left = 48.0
margin_top = 104.0
margin_right = 200.0
margin_bottom = 144.0
color = Color( 0.313726, 0.313726, 0.313726, 1 )

[node name="health_label" type="Label" parent="health_label_bg"]
margin_left = 16.0
margin_top = 5.0
margin_right = 280.0
margin_bottom = 37.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 7 )
text = "xd / xd"
valign = 1

[node name="health_bar" type="TextureRect" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 660.0
margin_bottom = 144.0
rect_scale = Vector2( 0.749969, 0.749969 )
rect_clip_content = true
texture = ExtResource( 5 )
expand = true

[node name="health_bar_bg" type="TextureRect" parent="health_bar"]
margin_left = 9.0
margin_top = 8.0
margin_right = 318.0
margin_bottom = 57.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 9 )
expand = true
stretch_mode = 2

[node name="health_bar_riceball" type="TextureRect" parent="health_bar"]
margin_left = -40.0
margin_top = -8.0
margin_right = 624.0
margin_bottom = 120.0
texture = ExtResource( 8 )
expand = true

[node name="backpack_slots" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -136.0
margin_top = 136.0
margin_right = -8.0
margin_bottom = 648.0
rect_scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 2

[node name="backpack" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -160.0
margin_top = 40.0
margin_right = -48.0
margin_bottom = 152.0
texture = ExtResource( 3 )
expand = true

[node name="TextureRect" type="TextureRect" parent="backpack"]
margin_left = 21.0
margin_top = 93.0
margin_right = 91.0
margin_bottom = 163.0
size_flags_horizontal = 0
size_flags_vertical = 0
texture = ExtResource( 6 )
expand = true

[node name="fps_counter" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = -32.0
margin_right = 207.0
margin_bottom = 64.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 4 )
text = "FPS: blah"

[node name="stage_label" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -136.0
margin_top = -64.0
margin_right = 24.0
margin_bottom = 55.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 5 )
text = "Stage _"

[node name="loop_label" type="Label" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -136.0
margin_top = -96.0
margin_right = 24.0
margin_bottom = 23.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 5 )
text = "Loop _"

[node name="time_label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -152.0
margin_top = 16.0
margin_right = 150.0
margin_bottom = 135.0
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 6 )
text = "Elapsed Time:
_:_"
align = 1

[node name="PauseBG" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
color = Color( 0.0941176, 0.0941176, 0.0941176, 0.768627 )

[node name="Pause_Menu" type="VBoxContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -188.0
margin_top = -200.5
margin_right = 188.0
margin_bottom = 200.5
theme = ExtResource( 1 )

[node name="title" type="Label" parent="Pause_Menu"]
margin_right = 376.0
margin_bottom = 58.0
theme = ExtResource( 1 )
text = "Game Paused"
align = 1

[node name="resume" type="Button" parent="Pause_Menu"]
margin_top = 74.0
margin_right = 376.0
margin_bottom = 172.0
rect_pivot_offset = Vector2( 168, 35 )
size_flags_vertical = 3
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Resume"

[node name="main_menu" type="Button" parent="Pause_Menu"]
margin_top = 188.0
margin_right = 376.0
margin_bottom = 286.0
rect_pivot_offset = Vector2( 168, 35 )
size_flags_vertical = 3
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Main Menu"

[node name="quit" type="Button" parent="Pause_Menu"]
margin_top = 302.0
margin_right = 376.0
margin_bottom = 401.0
rect_pivot_offset = Vector2( 168, 35 )
size_flags_vertical = 3
theme = ExtResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Quit"

[connection signal="pressed" from="Pause_Menu/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Pause_Menu/main_menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Pause_Menu/quit" to="." method="_on_quit_pressed"]
